src/objects/Litigation__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <label>ADCVD Case Number Text Value</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <label>ADCVD Case Type</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Litigation</relationshipLabel>
        <relationshipName>Litigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Draft_Remand_Concurrence_to_DAS__c</fullName>
        <label>Actual Draft Remand Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Draft_Remand_Issues_to_DAS__c</fullName>
        <label>Actual Draft Remand Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Draft_Remand_released_to_party__c</fullName>
        <label>Actual Draft Remand (released to party)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Concurrence_to_DAS__c</fullName>
        <label>Actual Final Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Issues_to_DAS__c</fullName>
        <label>Actual Final Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Signature__c</fullName>
        <label>Actual Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Initiation_Signature__c</fullName>
        <label>Actual Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Prelim_Concurrence_to_DAS__c</fullName>
        <label>Actual Prelim Concurrence to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Prelim_Issues_to_DAS__c</fullName>
        <label>Actual Prelim Issues to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Preliminary_Signature__c</fullName>
        <label>Actual Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <label>CBP Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Amended_Final_Signature__c</fullName>
        <label>Calculated Amended Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Draft_Remand_release_to_party__c</fullName>
        <label>Calculated Draft Remand release to party</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Final_Signature__c</fullName>
        <label>Calculated Final Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Initiation_Signature__c</fullName>
        <label>Calculated Initiation Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Preliminary_Signature__c</fullName>
        <label>Calculated Preliminary Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Court_of_Panel_s_Ruling__c</fullName>
        <label>Court of Panel&apos;s Ruling</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Remand_Issued_by_Court_or_Panel__c</fullName>
        <label>Date Remand Issued by Court or Panel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_Remand_Concurrence_Due_to_DAS__c</fullName>
        <label>Draft Remand Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_Remand_Issues_Due_to_DAS__c</fullName>
        <label>Draft Remand Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Final_Signature_Before_Ext__c</fullName>
        <label>Expected Final Signature Before Ext</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Concurrence_Due_to_DAS__c</fullName>
        <label>Final Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Extension_of_days__c</fullName>
        <label>Final Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Issues_Due_to_DAS__c</fullName>
        <label>Final Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Team_Meeting_Deadline__c</fullName>
        <label>Final Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiation_Extension_of_days__c</fullName>
        <label>Initiation Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Litigation_Type__c</fullName>
        <label>International Litigation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>429</fullName>
                </value>
                <value>
                    <fullName>437</fullName>
                </value>
                <value>
                    <fullName>449</fullName>
                </value>
                <value>
                    <fullName>464</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Litigation</relationshipLabel>
        <relationshipName>Litigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Enterprise_Server_URL_390 , FIND(&apos;/services&apos;, $Api.Enterprise_Server_URL_390)) &amp; Id,  Litigation_Name__c , &apos;_self&apos;)</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Name__c</fullName>
        <formula>ADCVD_Case_Number__c + &apos;--&apos;+ Name</formula>
        <label>Litigation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Announcement_Date__c</fullName>
        <label>Next Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Due_to_DAS_Deadline__c</fullName>
        <label>Next Due to DAS Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Major_Deadline__c</fullName>
        <label>Next Major Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Office_Deadline__c</fullName>
        <label>Next Office Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Office_PM_Deadline__c</fullName>
        <label>Next Office/PM Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
                <value>
                    <fullName>VIII</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Covered_End_Date__c</fullName>
        <label>Period Covered - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Covered_Start_Date__c</fullName>
        <label>Period Covered - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Litigation</relationshipLabel>
        <relationshipName>Litigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prelim_Concurrence_Due_to_DAS__c</fullName>
        <label>Prelim Concurrence Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Extension_of_days__c</fullName>
        <label>Prelim Extension (# of days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prelim_Issues_Due_to_DAS__c</fullName>
        <label>Prelim Issues Due to DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prelim_Team_Meeting_Deadline__c</fullName>
        <label>Prelim Team Meeting Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Filed__c</fullName>
        <label>Request Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Litigations</relationshipLabel>
        <relationshipName>Litigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by a Schedulable class to cause the Tolling Date Service to recalculate tolling days whenever a calculated announcement date is equal to &quot;yesterday when the associated trigger calculates the next announcement date.</description>
        <inlineHelpText>Hidden field used by system</inlineHelpText>
        <label>Schedule Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Litigation</relationshipLabel>
        <relationshipName>Litigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tolling_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tolling Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USTR_Notification_to_Implement_Final_Res__c</fullName>
        <label>USTR Notification to Implement Final Res</label>
        <type>Date</type>
    </fields>
    <label>Litigation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ADCVD_Case_Number__c</columns>
        <columns>Country__c</columns>
        <columns>ADCVD_Case_Type__c</columns>
        <columns>Product__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Litigation_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Litigations_ClosedLocked_Queue_Litigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Litigations-ClosedLocked Queue</label>
        <queue>Litigations_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Litigations_MigratedClosedLocked_Queue_Litigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Litigations-MigratedClosedLocked Queue</label>
        <queue>Litigations_MigratedClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Litigations_Open_Queue_Litigation</fullName>
        <filterScope>Queue</filterScope>
        <label>Litigations-Open Queue</label>
        <queue>Litigations_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Litigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litigation</pluralLabel>
    <recordTypes>
        <fullName>International_Litigation</fullName>
        <active>true</active>
        <label>International Litigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remand</fullName>
        <active>true</active>
        <label>Remand</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Draft_Remand_released_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Draft Released Party Date until the Calculate Draft Released Party Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Draft_Remand_release_to_party__c ), 
NOT( ISNULL( Actual_Draft_Remand_released_to_party__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Draft Remand Released Date must be populated in order to enter Actual Draft Remand Released Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Final_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Final Signature Date until the Calculate Final Signature Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Final_Signature__c ), 
NOT( ISNULL( Actual_Final_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Final Signature Date must be populated in order to enter Actual Final Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Initiation_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Initiation Signature Date until the Calculate Initiation Signature Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Initiation_Signature__c ), 
NOT( ISNULL( Actual_Initiation_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Initiation Signature Date must be populated in order to enter Actual Initiation Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Preliminary_Signature_Not_Blank</fullName>
        <active>true</active>
        <description>You cannot enter an Actual Preliminary Signature Date until the Calculate Preliminary Signature Date is not populated</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, AND( 
ISNULL( Calculated_Preliminary_Signature__c ), 
NOT( ISNULL( Actual_Preliminary_Signature__c )) 
))</errorConditionFormula>
        <errorMessage>Calculated Preliminary Signature Date must be populated in order to enter Actual Preliminary Signature Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Every_Litigation_must_have_a_Parent</fullName>
        <active>true</active>
        <description>Every Litigation must ONLY have either a Petition, an Investigation, or a Segment.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, ISNEW(), ISBLANK(ADCVD_Case__c), OR( 
(AND( ISBLANK(Petition__c),ISBLANK(Segment__c),ISBLANK(Investigation__c))),(IF(ISBLANK(Petition__c),0,1)+
   IF(ISBLANK(Segment__c),0,1)+ 
   IF(ISBLANK(Investigation__c),0,1)&gt;1) 
)
)</errorConditionFormula>
        <errorMessage>Every Litigation must have either a Petition, an Investigation, or a Segment with a related ADCVD Case record. Please enter ONLY one value, either for a Petition, an Investigation or a Segment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>International_Litigation_Final_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
$RecordType.DeveloperName = &quot;International_Litigation&quot;, 
  Final_Extension_of_days__c  &lt; 0
))</errorConditionFormula>
        <errorMessage>Final Extension cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>International_Litigation_Preli_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
$RecordType.DeveloperName = &quot;International_Litigation&quot;, 
   Prelim_Extension_of_days__c  &lt; 0
))</errorConditionFormula>
        <errorMessage>Preliminary Extension cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_reparents_Litigation_Records</fullName>
        
        <active>true</active>
        <description>Litigation records can only be reparented by a System Administrator.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
Locked__c == false,
NOT( ISNEW() ),
OR(ISCHANGED(Petition__c),ISCHANGED(Segment__c),ISCHANGED(Investigation__c)),$Profile.Name &lt;&gt;
&quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit this field. Only a System Administrator can edit the parent Petition, Segment, Investigation or ADCVD Case for this record.</errorMessage>
        </validationRules>
        <validationRules>
        <fullName>Prelim_Extension_of_days</fullName>
        <active>true</active>
        <errorConditionFormula>Calculated_Draft_Remand_release_to_party__c  &lt;  Calculated_Final_Signature__c</errorConditionFormula>
        <errorMessage>Please account for weekends or holidays when adjusting the extension number of days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Remand_Final_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false, And (
$RecordType.DeveloperName = &quot;Remand&quot;, 
  Final_Extension_of_days__c  &lt; 0
))</errorConditionFormula>
        <errorMessage>Final Extension cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>